tests/snapshots/parser__parse_post_with_headers.snap
---
source: tests/parser.rs
description: "\n        post http://localhost {\n        header \"Authorization\" \"Bearer token\"\n        header \"random\" \"tokener Bear\"\n        }"
expression: ast
---
Program(
  items: [
    Request(
      method: POST,
      endpoint: Url(Literal(
        value: "http://localhost",
        span: Span(
          start: Position(
            value: 14,
            line: 1,
            col: 13,
          ),
          end: Position(
            value: 30,
            line: 1,
            col: 29,
          ),
        ),
      )),
      block: Some(Block(
        statements: [
          Header(
            name: Node(StringLiteral(
              raw: "\"Authorization\"",
              value: "Authorization",
              span: Span(
                start: Position(
                  value: 48,
                  line: 2,
                  col: 15,
                ),
                end: Position(
                  value: 63,
                  line: 2,
                  col: 30,
                ),
              ),
            )),
            value: String(StringLiteral(
              raw: "\"Bearer token\"",
              value: "Bearer token",
              span: Span(
                start: Position(
                  value: 64,
                  line: 2,
                  col: 31,
                ),
                end: Position(
                  value: 78,
                  line: 2,
                  col: 45,
                ),
              ),
            )),
          ),
          Header(
            name: Node(StringLiteral(
              raw: "\"random\"",
              value: "random",
              span: Span(
                start: Position(
                  value: 94,
                  line: 3,
                  col: 15,
                ),
                end: Position(
                  value: 102,
                  line: 3,
                  col: 23,
                ),
              ),
            )),
            value: String(StringLiteral(
              raw: "\"tokener Bear\"",
              value: "tokener Bear",
              span: Span(
                start: Position(
                  value: 103,
                  line: 3,
                  col: 24,
                ),
                end: Position(
                  value: 117,
                  line: 3,
                  col: 38,
                ),
              ),
            )),
          ),
        ],
        span: Span(
          start: Position(
            value: 31,
            line: 1,
            col: 30,
          ),
          end: Position(
            value: 126,
            line: 4,
            col: 8,
          ),
        ),
      )),
      span: Span(
        start: Position(
          value: 9,
          line: 1,
          col: 8,
        ),
        end: Position(
          value: 126,
          line: 4,
          col: 8,
        ),
      ),
    ),
  ],
)
