tests/snapshots/parser__parse_post_with_headers_and_body.snap
---
source: tests/parser.rs
description: "\n        post http://localhost {\n        header \"Authorization\" \"Bearer token\"\n        body \"{neet: 1337}\"\n        }"
expression: ast
---
Program(
  source: "\n        post http://localhost {\n        header \"Authorization\" \"Bearer token\"\n        body \"{neet: 1337}\"\n        }",
  items: [
    Request(
      method: POST,
      endpoint: Url(Literal(
        value: "http://localhost",
        span: Span(
          start: Position(
            value: 14,
            line: 1,
            col: 13,
          ),
          end: Position(
            value: 30,
            line: 1,
            col: 29,
          ),
        ),
      )),
      block: Some(Block(
        statements: [
          Header(
            name: Ok(StringLiteral(
              raw: "\"Authorization\"",
              value: "Authorization",
              span: Span(
                start: Position(
                  value: 48,
                  line: 2,
                  col: 15,
                ),
                end: Position(
                  value: 63,
                  line: 2,
                  col: 30,
                ),
              ),
            )),
            value: String(StringLiteral(
              raw: "\"Bearer token\"",
              value: "Bearer token",
              span: Span(
                start: Position(
                  value: 64,
                  line: 2,
                  col: 31,
                ),
                end: Position(
                  value: 78,
                  line: 2,
                  col: 45,
                ),
              ),
            )),
          ),
          Body(
            value: String(StringLiteral(
              raw: "\"{neet: 1337}\"",
              value: "{neet: 1337}",
              span: Span(
                start: Position(
                  value: 92,
                  line: 3,
                  col: 13,
                ),
                end: Position(
                  value: 106,
                  line: 3,
                  col: 27,
                ),
              ),
            )),
            start: Position(
              value: 87,
              line: 3,
              col: 8,
            ),
          ),
        ],
        span: Span(
          start: Position(
            value: 31,
            line: 1,
            col: 30,
          ),
          end: Position(
            value: 115,
            line: 4,
            col: 8,
          ),
        ),
      )),
      span: Span(
        start: Position(
          value: 9,
          line: 1,
          col: 8,
        ),
        end: Position(
          value: 115,
          line: 4,
          col: 8,
        ),
      ),
    ),
  ],
)
