tests/snapshots/parser__parse_template_string_literal-2.snap
---
source: tests/parser.rs
description: "\nlet b = `asdf ${}` \n"
expression: ast
---
Program(
  source: "\nlet b = `asdf ${}` \n",
  items: [
    Let(VariableDeclaration(
      identifier: Ok(Token(
        kind: Ident,
        text: "b",
        start: Position(
          value: 5,
          line: 1,
          col: 4,
        ),
      )),
      value: TemplateStringLiteral(
        span: Span(
          start: Position(
            value: 9,
            line: 1,
            col: 8,
          ),
          end: Position(
            value: 18,
            line: 1,
            col: 17,
          ),
        ),
        parts: [
          StringPart(StringLiteral(
            raw: "asdf ",
            value: "asdf ",
            span: Span(
              start: Position(
                value: 10,
                line: 1,
                col: 9,
              ),
              end: Position(
                value: 14,
                line: 1,
                col: 13,
              ),
            ),
          )),
        ],
      ),
    )),
  ],
)
