tests/snapshots/parser__parse_template_string_literal-3.snap
---
source: tests/parser.rs
description: "\nlet b = `asdf ${test} ${} ${\"word\"}`\n"
expression: ast
---
Program(
  source: "\nlet b = `asdf ${test} ${} ${\"word\"}`\n",
  items: [
    Let(VariableDeclaration(
      identifier: Ok(Token(
        kind: Ident,
        text: "b",
        start: Position(
          value: 5,
          line: 1,
          col: 4,
        ),
      )),
      value: TemplateStringLiteral(
        span: Span(
          start: Position(
            value: 9,
            line: 1,
            col: 8,
          ),
          end: Position(
            value: 36,
            line: 1,
            col: 35,
          ),
        ),
        parts: [
          StringPart(StringLiteral(
            raw: "asdf ",
            value: "asdf ",
            span: Span(
              start: Position(
                value: 10,
                line: 1,
                col: 9,
              ),
              end: Position(
                value: 14,
                line: 1,
                col: 13,
              ),
            ),
          )),
          ExpressionPart(Identifier(Ok(Token(
            kind: Ident,
            text: "test",
            start: Position(
              value: 17,
              line: 1,
              col: 16,
            ),
          )))),
          StringPart(StringLiteral(
            raw: " ",
            value: " ",
            span: Span(
              start: Position(
                value: 22,
                line: 1,
                col: 21,
              ),
              end: Position(
                value: 22,
                line: 1,
                col: 21,
              ),
            ),
          )),
          StringPart(StringLiteral(
            raw: " ",
            value: " ",
            span: Span(
              start: Position(
                value: 26,
                line: 1,
                col: 25,
              ),
              end: Position(
                value: 26,
                line: 1,
                col: 25,
              ),
            ),
          )),
          ExpressionPart(String(StringLiteral(
            raw: "\"word\"",
            value: "word",
            span: Span(
              start: Position(
                value: 29,
                line: 1,
                col: 28,
              ),
              end: Position(
                value: 34,
                line: 1,
                col: 33,
              ),
            ),
          ))),
        ],
      ),
    )),
  ],
)
