tests/snapshots/parser__parse_template_string_literal-6.snap
---
source: tests/parser.rs
description: "`asdf ${`hello${\"world\"}`} jkl`"
expression: ast
---
Program(
  source: "`asdf ${`hello${\"world\"}`} jkl`",
  items: [
    Expr(TemplateSringLiteral(
      span: Span(
        start: Position(
          value: 0,
          line: 0,
          col: 0,
        ),
        end: Position(
          value: 30,
          line: 0,
          col: 30,
        ),
      ),
      parts: [
        StringPart(StringLiteral(
          raw: "asdf ",
          value: "asdf ",
          span: Span(
            start: Position(
              value: 1,
              line: 0,
              col: 1,
            ),
            end: Position(
              value: 5,
              line: 0,
              col: 5,
            ),
          ),
        )),
        ExpressionPart(TemplateSringLiteral(
          span: Span(
            start: Position(
              value: 8,
              line: 0,
              col: 8,
            ),
            end: Position(
              value: 24,
              line: 0,
              col: 24,
            ),
          ),
          parts: [
            StringPart(StringLiteral(
              raw: "hello",
              value: "hello",
              span: Span(
                start: Position(
                  value: 9,
                  line: 0,
                  col: 9,
                ),
                end: Position(
                  value: 13,
                  line: 0,
                  col: 13,
                ),
              ),
            )),
            ExpressionPart(String(StringLiteral(
              raw: "\"world\"",
              value: "world",
              span: Span(
                start: Position(
                  value: 16,
                  line: 0,
                  col: 16,
                ),
                end: Position(
                  value: 22,
                  line: 0,
                  col: 22,
                ),
              ),
            ))),
          ],
        )),
        StringPart(StringLiteral(
          raw: " jkl",
          value: " jkl",
          span: Span(
            start: Position(
              value: 26,
              line: 0,
              col: 26,
            ),
            end: Position(
              value: 29,
              line: 0,
              col: 29,
            ),
          ),
        )),
      ],
    )),
  ],
)
