tests/snapshots/parser__parse_template_string_literal.snap
---
source: tests/parser.rs
description: "\n        post /api {\n            body `{\"neet\": ${env(\"love\")}, 2: ${\"two\"}}`\n        }"
expression: ast
---
Program(
  source: "\n        post /api {\n            body `{\"neet\": ${env(\"love\")}, 2: ${\"two\"}}`\n        }",
  items: [
    Request(
      method: POST,
      endpoint: Pathname(Literal(
        value: "/api",
        span: Span(
          start: Position(
            value: 14,
            line: 1,
            col: 13,
          ),
          end: Position(
            value: 18,
            line: 1,
            col: 17,
          ),
        ),
      )),
      block: Some(Block(
        statements: [
          Body(
            value: TemplateSringLiteral(
              span: Span(
                start: Position(
                  value: 38,
                  line: 2,
                  col: 17,
                ),
                end: Position(
                  value: 77,
                  line: 2,
                  col: 56,
                ),
              ),
              parts: [
                String(StringLiteral(
                  raw: "`{\"neet\": ",
                  value: "{\"neet\": ",
                  span: Span(
                    start: Position(
                      value: 38,
                      line: 2,
                      col: 17,
                    ),
                    end: Position(
                      value: 48,
                      line: 2,
                      col: 27,
                    ),
                  ),
                )),
                Call(CallExpr(
                  identifier: Ok(Token(
                    kind: Ident,
                    text: "env",
                    start: Position(
                      value: 50,
                      line: 2,
                      col: 29,
                    ),
                  )),
                  arguments: ExpressionList(
                    span: Span(
                      start: Position(
                        value: 53,
                        line: 2,
                        col: 32,
                      ),
                      end: Position(
                        value: 61,
                        line: 2,
                        col: 40,
                      ),
                    ),
                    exprs: [
                      String(StringLiteral(
                        raw: "\"love\"",
                        value: "love",
                        span: Span(
                          start: Position(
                            value: 54,
                            line: 2,
                            col: 33,
                          ),
                          end: Position(
                            value: 60,
                            line: 2,
                            col: 39,
                          ),
                        ),
                      )),
                    ],
                  ),
                )),
                String(StringLiteral(
                  raw: ", 2: ",
                  value: ", 2: ",
                  span: Span(
                    start: Position(
                      value: 62,
                      line: 2,
                      col: 41,
                    ),
                    end: Position(
                      value: 67,
                      line: 2,
                      col: 46,
                    ),
                  ),
                )),
                String(StringLiteral(
                  raw: "\"two\"",
                  value: "two",
                  span: Span(
                    start: Position(
                      value: 69,
                      line: 2,
                      col: 48,
                    ),
                    end: Position(
                      value: 74,
                      line: 2,
                      col: 53,
                    ),
                  ),
                )),
                String(StringLiteral(
                  raw: "}`",
                  value: "}",
                  span: Span(
                    start: Position(
                      value: 75,
                      line: 2,
                      col: 54,
                    ),
                    end: Position(
                      value: 77,
                      line: 2,
                      col: 56,
                    ),
                  ),
                )),
              ],
            ),
            start: Position(
              value: 33,
              line: 2,
              col: 12,
            ),
          ),
        ],
        span: Span(
          start: Position(
            value: 19,
            line: 1,
            col: 18,
          ),
          end: Position(
            value: 86,
            line: 3,
            col: 8,
          ),
        ),
      )),
      span: Span(
        start: Position(
          value: 9,
          line: 1,
          col: 8,
        ),
        end: Position(
          value: 86,
          line: 3,
          col: 8,
        ),
      ),
    ),
  ],
)
